  column is now BLOB - it is not possible to create TINYBLOB column.

SQLObject 0.9.10
================

* Another unicode-related patch for MySQL; required because different
  versions of MySQLdb require different handling::

   - MySQLdb < 1.2.1: only ascii
   - MySQLdb = 1.2.1: only unicode
   - MySQLdb > 1.2.1: both ascii and unicode

SQLObject 0.9.9
===============

* Backported from the trunk: under MySQL use the connection's dbEncoding
  instead of ascii, when converting a unicode value from python to database
  for a StringCol.

SQLObject 0.9.8
===============

Released 1 Dec 2008.

* Changed interpretation of strings in the DB URI for boolean parameters:
  '0', 'no', 'off' and 'false' are now interpreted as False.

* Fixed a bug with incorrect handling of calls like
  connectionForURI(dburi, cache=False) when dburi already contains some
  parameters in the URI.

* Convert decimal.to_eng_string() to str to work around a bug in Python 2.5.2;
  see http://mail.python.org/pipermail/python-dev/2008-March/078189.html

* Added test_default_style.py.

* Fixed a minor bug in SQLiteConnection that fails to parse Enum columns.

SQLObject 0.9.7
===============

Released 30 May 2008.

Small Features
--------------

* Use VARCHAR(MAX) and VARBINARY(MAX) for MSSQL >= 9.0.

* Run post_funcs after RowDestroySignal.

Bug Fixes
---------

* Fixed a minor bug in Set column.

* A bug fixed for RowCreatedSignal together with InheritableSQLObject:
  run post_funcs after the entire hierarchy has been created.

* Aggregate functions now honors 'distinct'.

SQLObject 0.9.6
===============

Released 4 May 2008.

* A bug in inheritable delColumn() that doesn't remove properties was fixed.

* A minor bug was fixed in col.py - the registry must be passed to findClass().

* Reverted the patch declarative.threadSafeMethod() - it causes more harm
  then good.

SQLObject 0.9.5
===============

Released 10 Mar 2008.

* Fixed a minor bug in SQLiteConnection.columnsFromSchema() - set dbName.
